--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
       <div id="board"></div>
+      <div id="startScreen">Click to Start Game &<br><br>space to controll bird</div>
+
 
 </body>
 </html>
